fix: .l-aside collapsed visibility hidden

--- a/scss/_layouts_application.scss
+++ b/scss/_layouts_application.scss
@@ -260,6 +260,7 @@ $application-layout--side-nav-width-expanded: 15rem !default;
     &.is-collapsed {
       box-shadow: $panel-drop-shadow-transparent;
       transform: translateX(100%);
+      visibility: hidden;
     }
 
     @media (min-width: $application-layout--breakpoint-side-nav-collapsed) {
